[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
include-package-data = true

[tools.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"mlir_tensorrt.compiler._mlir_libs" = ["*.so"]

[project]
name = "mlir_tensorrt_compiler"
description = "The MLIR-TensorRT compiler."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
]
dependencies = [
    "numpy>=1.25.0, <=1.26",
    "pybind11>=2.8.0, <=2.10.3",
    "PyYAML>= 5.3.1, <=6.0.1",
    "dataclasses>=0.6, <=0.8",
    "tensorrt~=10.0",
]
dynamic = ["version"]
